--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,5 +42,9 @@
     <color name="color_3e7dfb">#3e7dfb</color>
     <color name="color_8D99AE">#8D99AE</color>
 
+    <color name="color_1C95D7">#1C95D7</color>
+    <color name="color_694FF0">#694FF0</color>
+    <color name="color_F26F30">#F26F30</color>
+
     <color name="color_666">#666666</color>
 </resources>
