--- a/app/src/main/res/layout/empty_trade_list.xml
+++ b/app/src/main/res/layout/empty_trade_list.xml
@@ -1,40 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ll_emptyview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:gravity="center_horizontal"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/ll_emptyview"
+        android:layout_width="match_parent"
+        android:layout_height="370dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/bg_round10dp_white"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/tv_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:drawableTop="@drawable/bg_kongbai8"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:lineSpacingMultiplier="1.2"
+            android:text="无可用优惠券"
+            android:textColor="@color/color_3B3838"
+            android:textSize="15sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_empty2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="伤了，难道是人品出了问题"
+            android:textColor="@color/color_7C7877"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/tv_guangguang"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="72dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="72dp"
+            android:background="@drawable/btn_stroke_yellow"
+            android:gravity="center"
+            android:text="去随便逛逛"
+            android:textColor="@color/FF6200"
+            android:textSize="17sp" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:drawableTop="@drawable/bg_kongbai4"
-        android:drawablePadding="10dp"
-        android:layout_marginTop="70dp"
-        android:gravity="center"
-        android:lineSpacingMultiplier="1.2"
-        android:text="近一年暂无交易记录"
-        android:textColor="@color/color_3B3838"
-        android:textSize="15sp"
-        android:visibility="visible" />
+        android:textStyle="bold"
+        android:textSize="14sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:textColor="@color/color_282525"
+        android:text="配送卡(3)"/>
 
-
-    <TextView
-        android:id="@+id/tv_guangguang"
+    <include layout="@layout/item_orderdetail_head_card"
+        android:id="@+id/view_3"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="去随便逛逛"
-        android:textSize="17sp"
-        android:textColor="@color/FF6200"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:layout_marginRight="72dp"
-        android:layout_marginLeft="72dp"
-        android:background="@drawable/btn_stroke_yellow"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/bg_round10dp_white"
+        android:layout_marginBottom="40dp"/>
+
 </LinearLayout>
