--- a/app/src/main/res/layout/foot_coupon.xml
+++ b/app/src/main/res/layout/foot_coupon.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,7 +14,7 @@
         android:layout_marginTop="10dp"
         android:text="配送卡(3)"/>
 
-    <ListView
+    <com.bee.user.widget.MyListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
