--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -6,8 +6,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_round10dp_white">
+        android:layout_margin="2dp"
+        android:background="@drawable/bg_hongbao">
 
 
         <TextView
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="55dp"
+            android:textStyle="bold"
             android:textSize="15sp"
             android:textColor="@color/color_282525"
             android:text="¥"/>
