--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="color_FF6200">#FF6200</color>
     <color name="color_FF5050">#FF5050</color>
     <color name="color_FF6300">#FF6300</color>
+    <color name="color_FF6400">#FF6400</color>
     <color name="color_2CD18A">#2CD18A</color>
     <color name="color_3B3838">#3B3838</color>
     <color name="color_FF4F4F">#FF4F4F</color>
