--- a/app/src/main/res/drawable/btn_stroke5dp_eee.xml
+++ b/app/src/main/res/drawable/btn_stroke5dp_eee.xml
@@ -4,8 +4,8 @@
     android:useLevel="false">
 
 
-    <corners android:radius="2dp" />
+    <corners android:radius="5dp" />
 
-    <stroke android:color="@color/color_FF6100"
+    <stroke android:color="@color/color_eee"
         android:width="1px"/>
 </shape>
