--- a/app/src/main/res/layout/activity_password_login.xml
+++ b/app/src/main/res/layout/activity_password_login.xml
@@ -127,6 +127,7 @@
                 android:text="已阅读并同意"/>
 
             <TextView
+                android:id="@+id/tv_xieyi_regist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_3D7DFB"
@@ -141,6 +142,8 @@
                 android:text="和"/>
 
             <TextView
+
+                android:id="@+id/tv_xieyi_yinsi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_3D7DFB"
