--- a/app/src/main/res/layout/activity_ordering_map.xml
+++ b/app/src/main/res/layout/activity_ordering_map.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.amap.api.maps.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </com.amap.api.maps.MapView>
 
     <ImageButton
         android:id="@+id/iv_back"
