--- a/app/src/main/res/layout/dialog_qiandao.xml
+++ b/app/src/main/res/layout/dialog_qiandao.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/icon_fankui" />
+                android:src="@drawable/icon_qiandaochenggong" />
 
             <TextView
                 android:id="@+id/tv_status"
