--- a/app/src/main/res/layout/foot_orderdetail.xml
+++ b/app/src/main/res/layout/foot_orderdetail.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
+
+    <include layout="@layout/item_order_feiyong"
+        />
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,6 +17,7 @@
         android:orientation="vertical"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="15dp"
