--- a/app/src/main/res/layout/item_point_day.xml
+++ b/app/src/main/res/layout/item_point_day.xml
@@ -25,11 +25,11 @@
             android:textSize="11sp" />
 
         <ImageView
+            android:id="@+id/tv_image"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="@color/color_2CD18A" />
+            android:layout_marginBottom="4dp" />
 
         <TextView
             android:id="@+id/tv_point"
