--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -115,5 +115,16 @@
         <item name="android:background">@drawable/bg_pay_text_stroke</item>
     </style>
 
+    <style name="CollapsingTextAppearance" parent="Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
+    <style name="CollapsingTextAppearance.big" >
+        <item name="android:textColor">@color/color_282525</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+    <style name="CollapsingTextAppearance.small" >
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:textColor">@color/color_282525</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 
 </resources>
