--- a/app/src/main/res/layout/item_giftcard_zengsong.xml
+++ b/app/src/main/res/layout/item_giftcard_zengsong.xml
@@ -19,8 +19,7 @@
             android:layout_height="100dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:scaleType="centerInside"
-            android:src="@color/color_FF6300" />
+            android:scaleType="centerInside" />
 
 
         <LinearLayout
