--- a/app/src/main/res/layout/activity_buy_giftcard.xml
+++ b/app/src/main/res/layout/activity_buy_giftcard.xml
@@ -87,7 +87,8 @@
                 android:layout_height="170dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:background="@color/color_3D7DFB"
+                android:scaleType="fitXY"
+                android:src="@drawable/quan_100"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
