--- a/app/src/main/res/layout/activity_order_detail_map.xml
+++ b/app/src/main/res/layout/activity_order_detail_map.xml
@@ -1,109 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/annonce.main.coordinator"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="RtlHardcoded"
-    >
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
-        app:elevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
+
+
+        <!--        app:title="等待支付"-->
+        <!--        app:collapsedTitleGravity="start|left|center_vertical"-->
+        <!--        app:collapsedTitleTextAppearance="@style/CollapsingTextAppearance.small"-->
+
+        <!--        app:expandedTitleGravity="bottom"-->
+        <!--        app:expandedTitleMarginBottom="240dp"-->
+        <!--        app:expandedTitleMarginStart="10dp"-->
+        <!--        app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.big"-->
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:title="等待支付"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-
-            app:collapsedTitleTextAppearance="@style/CollapsingTextAppearance.small"
-            app:collapsedTitleGravity="start|left|center_vertical"
-            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.big"
-            app:expandedTitleMarginBottom="240dp"
-            app:expandedTitleMarginStart="10dp"
-            app:expandedTitleGravity="bottom">
+            app:contentScrim="@color/transparent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <com.bee.user.widget.MyMapView
                 android:id="@+id/map"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_collapseMode="parallax"/>
 
-            <View
-                android:id="@+id/background"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/bg_gradient_white_grey"/>
+                app:layout_collapseMode="parallax" />
+
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/title_bar_height"
+                android:layout_height="100dp"
                 android:background="@null"
-                app:elevation="0dp"
                 android:elevation="0dp"
-                app:layout_collapseMode="pin"
+                android:minHeight="100dp"
                 app:contentInsetLeft="0dp"
                 app:contentInsetRight="0dp"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
-                >
-                <ImageButton
-                    android:id="@+id/iv_back"
+                app:elevation="0dp"
+                app:layout_collapseMode="pin">
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/title_bar_height"
-                    android:background="@color/transparent"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:src="@drawable/icon_back_anse" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/background"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0"
+                        android:background="@drawable/bg_gradient_white_grey" />
+
+
+
+                    <TextView
+                        android:id="@+id/tv_text_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:drawableRight="@drawable/icon_link"
+                        android:drawablePadding="10dp"
+                        android:gravity="center_vertical"
+                        android:text="等待支付"
+                        android:textColor="@color/color_282525"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
+
+
+                    <ImageButton
+                        android:id="@+id/iv_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/title_bar_height"
+                        android:background="@color/transparent"
+                        android:layout_above="@+id/tv_text_title"
+                        android:layout_marginBottom="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:src="@drawable/icon_back_anse" />
+                </RelativeLayout>
+
 
             </androidx.appcompat.widget.Toolbar>
-
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        app:behavior_overlapTop="232dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scrollbars="none"-->
+<!--        app:behavior_overlapTop="232dp"-->
+<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:textColor="@color/color_282525"-->
-<!--                app:layout_collapseMode="pin"-->
-<!--                android:textSize="25sp"-->
-<!--                android:text="等待支付"/>-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:layout_marginTop="10dp"
+                android:scrollbars="none"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:behavior_overlapTop="232dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+<!--        </LinearLayout>-->
+<!--    </androidx.core.widget.NestedScrollView>-->
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
