--- a/app/src/main/res/layout/dialog_home_ditu.xml
+++ b/app/src/main/res/layout/dialog_home_ditu.xml
@@ -2,14 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:padding="15dp"
     android:background="@drawable/bg_round20_white">
 
 
-    <WebView
+
+    <com.amap.api.maps.TextureMapView
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="160dp"/>
+
 
 
     <TextView
