--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -96,6 +96,7 @@
         android:id="@+id/recyclerview_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         android:layout_below="@+id/cet_search"
         android:layout_marginTop="10dp" />
 
