--- a/app/src/main/res/layout/dialog_store_bottom_choose.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_choose.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:id="@+id/tv_confirm"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="35dp"
