--- a/app/src/main/res/layout/fragment_chart_data.xml
+++ b/app/src/main/res/layout/fragment_chart_data.xml
@@ -39,7 +39,7 @@
             <TextView
                 android:id="@+id/tv_store"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="新天地大厦店"
                 android:drawableRight="@drawable/icon_link"
                 android:drawablePadding="10dp"
@@ -56,7 +56,7 @@
             <TextView
                 android:id="@+id/tv_clear"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="清空"
                 android:gravity="center_vertical"
                 android:textColor="@color/color_3B3838"
