--- a/app/src/main/res/layout/head_fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/head_fragment_chart_nodata.xml
@@ -24,9 +24,9 @@
             android:id="@+id/iv_icon"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@color/color_FF6100"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bg_kongbai2"/>
 
         <TextView
             android:id="@+id/tv_1"
