--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <!--全局主题颜色值-->
     <color name="theme_color">#ffffff</color>
 
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FF6200</color>
+    <color name="colorPrimaryDark">#FF6200</color>
     <color name="colorAccent">#FF6200</color>
 
     <color name="transparent">#00ffffff</color>
