--- a/app/src/main/res/layout/activity_dingwei2.xml
+++ b/app/src/main/res/layout/activity_dingwei2.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
 
@@ -99,9 +100,11 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-25dp"
         android:paddingTop="15dp"
+        android:background="@color/white"
         android:paddingLeft="10dp"
         android:textColor="@color/color_282626"
         android:textSize="14sp"
