--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -90,6 +90,131 @@
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/ditu"/>
+
+            <ImageView
+                android:id="@+id/iv_miaosha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginLeft="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/xianshimiaosha"/>
+
+            <TextView
+                android:id="@+id/tv_money_pre2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:layout_marginTop="26dp"
+                android:text="¥"/>
+            <TextView
+                android:id="@+id/tv_money2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toRightOf="@+id/tv_money_pre2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="23sp"
+                android:layout_marginTop="16dp"
+                android:text="10"/>
+
+            <TextView
+                android:id="@+id/tv_money_past2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_money_pre2"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:text="¥10"/>
+
+
+            <TextView
+                android:id="@+id/tv_shengyu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="距结束还剩"
+                android:textSize="13sp"
+                android:textColor="@color/color_282525"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="35dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_shengyu"
+                app:layout_constraintTop_toBottomOf="@+id/tv_shengyu">
+
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/bg_round2dp_red"
+                    android:text="00"
+                    android:textColor="@color/white"
+                    android:textSize="13sp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    android:textSize="13sp"
+                    android:textColor="@color/color_FF5050"/>
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/bg_round2dp_red"
+                    android:text="00"
+                    android:textColor="@color/white"
+                    android:textSize="13sp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    android:textSize="13sp"
+                    android:textColor="@color/color_FF5050"/>
+
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/bg_round2dp_red"
+                    android:text="00"
+                    android:textColor="@color/white"
+                    android:textSize="13sp"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:paddingLeft="10dp"
@@ -98,34 +223,44 @@
             android:paddingBottom="15dp"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_money"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textColor="@color/color_FF5050"
-                android:textStyle="bold"
-                android:textSize="12sp"
-                android:text="¥10"/>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_money_pre"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                android:textColor="@color/color_FF5050"-->
+<!--                android:textSize="12sp"-->
+<!--                android:layout_marginTop="6dp"-->
+<!--                android:text="¥"/>-->
+<!--            <TextView-->
+<!--                android:id="@+id/tv_money"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintLeft_toRightOf="@+id/tv_money_pre"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                android:textColor="@color/color_FF5050"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textSize="18sp"-->
+<!--                android:text="10"/>-->
 
-            <TextView
-                android:id="@+id/tv_money_past"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_money"
-                app:layout_constraintLeft_toRightOf="@+id/tv_money"
-                android:layout_marginLeft="8dp"
-                android:textColor="@color/color_ccc"
-                android:textSize="11sp"
-                android:text="¥10"/>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_money_past"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/tv_money_pre"-->
+<!--                app:layout_constraintLeft_toRightOf="@+id/tv_money"-->
+<!--                android:layout_marginLeft="8dp"-->
+<!--                android:textColor="@color/color_ccc"-->
+<!--                android:textSize="11sp"-->
+<!--                android:text="¥10"/>-->
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_money"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="6dp"
                 android:textColor="@color/color_282626"
                 android:textStyle="bold"
@@ -150,6 +285,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="6dp"
+                android:visibility="gone"
                 android:background="@drawable/btn_gradient_yellow_round"
                 android:textColor="@color/white"
                 android:textStyle="bold"
