--- a/app/src/main/res/layout/fragment_chart_data.xml
+++ b/app/src/main/res/layout/fragment_chart_data.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:paddingRight="14dp"
                 android:button="@drawable/checkbutton_chart"
                 android:gravity="center" />
 
@@ -45,8 +46,7 @@
                 android:drawablePadding="10dp"
                 android:gravity="center_vertical"
                 android:textColor="@color/color_282525"
-                android:textSize="17sp"
-                android:layout_marginLeft="14dp"/>
+                android:textSize="17sp"/>
 
             <View
                 android:layout_width="0dp"
