--- a/app/src/main/res/layout/fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/fragment_chart_nodata.xml
@@ -129,14 +129,15 @@
 
             <CheckBox
                 android:id="@+id/checkbox"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginLeft="15dp"
-                android:background="@drawable/checkbutton_chart"
-                android:button="@null"
+                android:button="@drawable/checkbutton_chart"
                 android:gravity="center" />
 
 
