--- a/app/src/main/res/layout/item_store_bottom.xml
+++ b/app/src/main/res/layout/item_store_bottom.xml
@@ -29,7 +29,7 @@
         android:gravity="center"
         android:text="2"
         android:textColor="@color/white"
-        android:textSize="12sp" />
+        android:textSize="11sp" />
 
 
     <TextView
@@ -39,23 +39,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
         android:text="合计"
         android:textColor="@color/color_282626"
         android:textSize="12sp" />
 
-
     <TextView
-        android:id="@+id/tv_heji_money"
+        android:id="@+id/tv_heji_money_pre"
         app:layout_constraintLeft_toRightOf="@+id/tv_heji"
-        app:layout_constraintTop_toTopOf="@+id/image_xuangou"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_heji"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
-        android:layout_marginTop="2dp"
-        android:text="¥10"
+        android:text="¥"
         android:textColor="@color/color_FF564A"
         android:textSize="12sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/tv_heji_money"
+        app:layout_constraintLeft_toRightOf="@+id/tv_heji_money_pre"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="10"
+        android:textColor="@color/color_FF564A"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
