--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,10 @@
         <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
     </style>
 
+    <style name="FoodActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowAnimationStyle">@android:style/Animation.Activity</item>
 
+    </style>
 
     <style name="SplashActivity" parent="android:Theme.Light.NoTitleBar.Fullscreen">
         <item name="android:windowBackground">@drawable/splash_layers</item>
