--- a/app/src/main/res/layout/head_activity_food_comment.xml
+++ b/app/src/main/res/layout/head_activity_food_comment.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/color_F5F5F5"/>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
+        android:layout_height="375dp">
 
-        <include
-            layout="@layout/item_store"
+        <com.bigkoo.convenientbanner.ConvenientBanner
+            android:id="@+id/banner2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="375dp"
+            app:canLoop="true">
 
+
+        </com.bigkoo.convenientbanner.ConvenientBanner>
+
+        <TextView
+            android:id="@+id/tv_index"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1/5"
+            android:paddingLeft="6dp"
+            android:paddingTop="1dp"
+            android:paddingRight="6dp"
+            android:paddingBottom="1dp"
+            android:background="@drawable/bg_banner_bottom_tag"
+            android:textColor="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="11sp"
+            android:layout_gravity="bottom|right"/>
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/color_F5F5F5"/>
-
-    <TextView
-        android:id="@+id/tv_food_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:textColor="@color/color_282626"
-        android:textStyle="bold"
-        android:paddingTop="20dp"
-        android:paddingBottom="10dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:drawableRight="@drawable/icon_link"
-        android:paddingRight="10dp"
-        android:text="商品评价"/>
 </LinearLayout>
